--- a/src/output.css
+++ b/src/output.css
@@ -669,6 +669,10 @@ video {
   right: -1px;
 }
 
+.right-\[35px\] {
+  right: 35px;
+}
+
 .top-5 {
   top: 1.25rem;
 }
@@ -681,36 +685,12 @@ video {
   top: 2px;
 }
 
-.top-\[8px\] {
-  top: 8px;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-\[150px\] {
-  top: 150px;
-}
-
-.right-\[100px\] {
-  right: 100px;
-}
-
-.right-\[10px\] {
-  right: 10px;
-}
-
-.right-\[40px\] {
-  right: 40px;
-}
-
 .top-\[60px\] {
   top: 60px;
 }
 
-.right-\[35px\] {
-  right: 35px;
+.top-\[8px\] {
+  top: 8px;
 }
 
 .isolate {
@@ -810,6 +790,10 @@ video {
 
 .mb-\[35px\] {
   margin-bottom: 35px;
+}
+
+.me-3 {
+  margin-inline-end: 0.75rem;
 }
 
 .mt-2 {
@@ -995,20 +979,12 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
 .\!w-\[100px\] {
   width: 100px !important;
 }
 
 .\!w-\[75px\] {
   width: 75px !important;
-}
-
-.w-\[0px\] {
-  width: 0px;
 }
 
 .w-\[100px\] {
@@ -1029,6 +1005,14 @@ video {
 
 .w-\[350px\] {
   width: 350px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[50px\] {
+  width: 50px;
 }
 
 .w-\[64px\] {
@@ -1061,10 +1045,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[450px\] {
-  width: 450px;
 }
 
 .max-w-\[144px\] {
@@ -2401,16 +2381,16 @@ video {
   padding: 15px;
 }
 
+.p-\[20px\] {
+  padding: 20px;
+}
+
 .p-\[25px\] {
   padding: 25px;
 }
 
 .p-\[8px\] {
   padding: 8px;
-}
-
-.p-\[20px\] {
-  padding: 20px;
 }
 
 .px-\[11px\] {
@@ -3270,6 +3250,14 @@ video {
 
   .sm\:w-\[135px\] {
     width: 135px;
+  }
+
+  .sm\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .sm\:w-auto {
+    width: auto;
   }
 
   .sm\:flex-col {
