--- a/src/output.css
+++ b/src/output.css
@@ -649,12 +649,24 @@ video {
   inset: -0.25rem;
 }
 
+.bottom-\[15px\] {
+  bottom: 15px;
+}
+
 .end-1 {
   inset-inline-end: 0.25rem;
 }
 
+.left-\[10px\] {
+  left: 10px;
+}
+
 .left-\[12px\] {
   left: 12px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .right-5 {
@@ -671,6 +683,10 @@ video {
 
 .right-\[35px\] {
   right: 35px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-5 {
@@ -935,6 +951,10 @@ video {
   height: 100px;
 }
 
+.h-\[130px\] {
+  height: 130px;
+}
+
 .h-\[150px\] {
   height: 150px;
 }
@@ -989,6 +1009,14 @@ video {
 
 .w-\[100px\] {
   width: 100px;
+}
+
+.w-\[130px\] {
+  width: 130px;
+}
+
+.w-\[150px\] {
+  width: 150px;
 }
 
 .w-\[180px\] {
@@ -2041,6 +2069,10 @@ video {
   border-width: 0px;
 }
 
+.border-8 {
+  border-width: 8px;
+}
+
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
@@ -2112,6 +2144,10 @@ video {
 .border-\[\#EEEEEE\] {
   --tw-border-opacity: 1;
   border-color: rgb(238 238 238 / var(--tw-border-opacity));
+}
+
+.border-\[\#cccccc91\] {
+  border-color: #cccccc91;
 }
 
 .border-\[\#e3e3e3\] {
@@ -2736,6 +2772,11 @@ video {
   line-height: 1.8;
 }
 
+.\!text-\[\#fff\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
 .\!text-fourth-color {
   --tw-text-opacity: 1 !important;
   color: rgb(126 126 126 / var(--tw-text-opacity)) !important;
@@ -2847,6 +2888,10 @@ video {
 .subpixel-antialiased {
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .bg-blend-normal {
