--- a/src/output.css
+++ b/src/output.css
@@ -2840,6 +2840,11 @@ video {
   color: rgb(230 234 239 / var(--tw-text-opacity));
 }
 
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .\!underline {
   text-decoration-line: underline !important;
 }
