--- a/assets/sass/themes/_color.scss
+++ b/assets/sass/themes/_color.scss
@@ -6,3 +6,4 @@ $fourth-color: #7E7E7E;
 $fifth-color: #adadad;
 $white: #E6EAEF;
 $gradient: linear-gradient(to right, $primary-color, $second-color);
+$red: #d79806
