--- a/assets/sass/core/_base.scss
+++ b/assets/sass/core/_base.scss
@@ -242,10 +242,10 @@ input[type="checkbox"]:checked {
     .category__item{
         box-shadow: 0 15px 20px -10px rgba(0, 0, 0, .04);
         transition: 0.5s ease-in-out all;
-        &:hover{
-            transform: scale(1.1);
-            box-shadow: 0 20px 20px -10px rgba(0, 0, 0, .1);
-        }
+        // &:hover{
+        //     transform: scale(1.1);
+        //     box-shadow: 0 20px 20px -10px rgba(0, 0, 0, .1);
+        // }
     }
     .owl-stage-outer{
         padding: 20px 0;
